// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShareLinkButton > snapshots > default state 1`] = `
<div>
  <button
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 rounded-xl px-4 py-2 lg:px-3 flex-row-reverse bg-pca-grey-900 text-pca-white hover:bg-pca-grey-800 active:bg-pca-grey-800 dark:bg-pca-white dark:text-pca-grey-900 dark:hover:bg-pca-grey-300 dark:active:bg-pca-grey-300"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      Share link
    </span>
    <svg
      aria-hidden="true"
      class="shrink-0 w-4.5 h-4.5"
      fill="transparent"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H9M15 17H17C19.7614 17 22 14.7614 22 12C22 9.23858 19.7614 7 17 7H15M7 12H17"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </button>
</div>
`;

exports[`ShareLinkButton > snapshots > disabled state 1`] = `
<div>
  <button
    aria-disabled="true"
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 pointer-events-none rounded-xl px-4 py-2 lg:px-3 flex-row-reverse bg-pca-grey-300 text-pca-grey-600 dark:bg-pca-grey-800 dark:text-pca-grey-400"
    disabled=""
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      Share link
    </span>
    <svg
      aria-hidden="true"
      class="shrink-0 w-4.5 h-4.5"
      fill="transparent"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H9M15 17H17C19.7614 17 22 14.7614 22 12C22 9.23858 19.7614 7 17 7H15M7 12H17"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </button>
</div>
`;
